# CG_TP_3

./: CMakeLists.txt  README.md  enunciado.md
assets/shaders/: filter.frag  filter.vert
src/: ShaderProgram.cpp  ShaderProgram.hpp  TextureLoader.cpp  TextureLoader.hpp  main.cpp
